fix(build): produce real Fabric mod jar — lower release target to 22 (TinyRemapper compat)
Root cause: Loom 1.9.2 ships TinyRemapper bundling an older ASM that caps at
class file major version 66 (JDK 22). Compiling with --release=25 produced V69
class files, breaking :remapJar with 'Unsupported class file major version 69'.

Fix: separate toolchain (JDK 25 — what we BUILD with) from release target
(JDK 22 — what we EMIT). FFM (MemorySegment / Arena) is final in 22, Vector
API has been stable incubator since 16+. Both still work.

Result: atlas-mc/build/libs/atlas-mc-0.1.0-SNAPSHOT.jar (55 KB) is a real
Fabric mod jar with bundled atlas-core and valid fabric.mod.json. Drop into
mods/ folder of any MC 1.21.4 + Fabric Loader 0.16+ instance.

build.gradle.kts:
- options.release.set(javaReleaseTarget) instead of toolchain version

gradle.properties:
- java.release.target=22 (new)
- org.gradle.java.installations.auto-detect=false (force JDK 25 only)
- org.gradle.java.installations.fromEnv=JAVA_HOME

README:
- Install section with required versions, JVM args, conflict list
- 'What Atlas does and doesn't' table — clarifies Phase 1 ships engine + service,
  in-game worldgen replacement is Phase 2

Tests still pass on JDK 25 with V66 classes.